# avogadro-genice

./: README.md  genice.py  plugin.json  pyproject.toml
src/avogadro_genice/: __init__.py  generator.py  genice-options.json
