[project]
name = "avogadro-genice"
version = "0.1.0"
description = "Generate ice unit cells for Avogadro 2 using GenIce2"
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
license = "BSD-3-Clause"
dependencies = ["genice2>=2.2.13.1,<3"]
requires-python = ">= 3.11"

[project.scripts]
avogadro-genice = "avogadro_genice:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.2,<0.11.0"]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.menu-commands]]
identifier = "genice"
menu = "Build"
item = "Generate Ice..."
user-options = "src/avogadro_genice/genice-options.json"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro-genice = { path = ".", editable = true }

[tool.pixi.tasks]
